--- a/services.css
+++ b/services.css
@@ -232,6 +232,7 @@
     
     .servicos_popup_conteudo {
         position: absolute;
+        scale: 0.5;
     }
     .servicos_popup_close {
         color: var(--azul-tres);
