--- a/style/services.css
+++ b/style/services.css
@@ -227,28 +227,12 @@
 
 
     .servicos_popup {
-        display: grid;
-        position: fixed;
-        inset: 0;
-        backdrop-filter: blur(10px);
-        padding: 2rem 1rem;
         place-items: center;
-        z-index: 1000;
-        cursor: auto;
-        visibility: hidden;
-        opacity: 0;
-        transform: scale(0.8);
-        transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
     }
     
     .servicos_popup_conteudo {
-        position: relative;
-        background-color: var(--cor-dois);
-        padding: 4.5rem 2.5rem 2.5rem 2.5rem;
-        border-radius: 2rem;
-        border: 0.4rem solid var(--azul-dois);
-        width: 30rem;
-        height: 35rem;
+        position: absolute;
+        scale: 0.5;
     }
     .servicos_popup_close {
         color: var(--azul-tres);
