--- a/style/header.css
+++ b/style/header.css
@@ -1,17 +1,18 @@
-@media screen and (max-width: 10000px) {
+
     .cabecalho {
         display: flex;
         align-items: center;
         justify-content: space-between;
         position: fixed;
         z-index: 1000;  
-        width: 100vw;
-        background-color: var(--azul-um);
+        width: 100%;
+        background-color: var(--azul-quatro-t);
+        backdrop-filter: blur(10px);
         padding: 0.5vw 0;
     }
     
     .cabecalho_img {
-        width: 80px;
+        width: 5vw;
         margin-left: 10vw;
     }
     
@@ -85,9 +86,57 @@
     .cabecalho_menu {
         display: none;
     }
+
+
+    /* ========== darkmode ========== */
+.dark-mode-but {
+  display: flex;
+  margin-right: 10vw;
 }
 
-@media screen and (max-width:840px) {
+.dark_chk {
+    position: absolute;
+    opacity: 0;
+    right: 11vw;
+    width: 5vw;
+    height: 2vw;
+    z-index: 50;
+    cursor: pointer;
+}
+
+.dark_label {
+    position: relative;
+    display: flex;
+    cursor: pointer;
+    border-radius: 50rem;
+    background-color: var(--azul-quatro);
+    height: 2vw;
+    width: 4vw;
+    transition: 0.5s;
+    box-shadow: inset 0 1px 5px var(--azul-tres);
+}
+
+.dark-ball {
+    background-color: var(--cor-dois);
+    border-radius: 50em;
+    height: 2vw;
+    width: 2vw;
+    position: relative;
+    top: 0;
+    right: 4vw;
+    scale:0.8;
+    cursor: pointer;
+    
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+}
+
+.dark_chk:checked ~ .dark-ball {
+    transform: translateX(2.3vw);
+}  
+
+
+/* @media screen and (max-width:840px) {
     .cabecalho {
         padding: 0.1vw 0;
     }
@@ -99,11 +148,12 @@
     .contate-me-botao {
         margin-right: 5vw;
     }
-}
+} */
 
 @media screen and (max-width:600px) {
     .cabecalho {
         background-color: transparent;
+        backdrop-filter: none;
     }
     
     .cabecalho_img {
@@ -129,16 +179,20 @@
         background-repeat: no-repeat; /* não repetir img */
         background-size: 60%;
         display: inline-block; /* posicionamento inline */
+        
     }
     .opcoes_botao:checked ~ .opcoes_rotulo > .cabecalho_menu-hamburguer {
         background-image: url("../assets/hover/menu.png"); /* imagem ativa */
+        
     }
     .opcoes_botao:checked ~ .opcoes_rotulo {
         background: var(--azul-quatro); /*back ativo*/
         border-radius: 300em;
+        
     }
     .menu_img {
         padding: 0.2em; /*pad imagem*/
+        
     }
     .lista_menu {
         display: none; /*desaparecer lista */
@@ -149,15 +203,17 @@
         background-color: var(--azul-quatro-t);
         backdrop-filter: blur(10px);
         border-radius: 15px 0 15px 15px;
-        border: 3px solid var(--azul-dois);
+        border: 3px solid var(--azul-tres);
         text-align: right;
         list-style-type: none;
         /* width:100vw; */
         height: 117vw;
         width: 80vw;
+        z-index: 1000;
     }
     .opcoes_botao:checked ~.lista_menu {
         display: block; /* aparecer lista */
+        
     }
     .opcoes_botao {
         display: none; /*desaparecer checkbox */
@@ -167,14 +223,14 @@
         margin: 1rem 0;
     }
     .menu_opcao {
-        color: var(--azul-dois);
+        color: var(--azul-tres);
         font-family: var(--font-paint);
         font-size: 2rem;
         text-decoration: none;
         margin: 0.5rem;
     } 
     .contate-menu {
-        border-top: 0.5vw solid var(--azul-dois);
+        border-top: 0.5vw solid var(--azul-tres);
         padding: 0.5rem 0 0 0.9rem;
     }
     .menu_opcao:active {
@@ -195,5 +251,29 @@
     }
 /* ============ Menu Hamburuger ============ */ 
 
+
+.dark-mode-but {
+     margin: 0;
+     margin-left: -60vw;
+  }
+  
+  .dark_chk {
+    width: 11vw;
+    opacity: 1;
+    left: 4vw;
+    height: 3vw;
+    z-index: 50;
+    cursor: pointer;
+  }
+  
+  .dark_label {
+      scale: 3;
+  }
+  
+  .dark-ball {
+      top: 0;
+      right: 6vw;
+      scale: 2.6;
+  }
 }
 
