--- a/style/about.css
+++ b/style/about.css
@@ -46,8 +46,9 @@
     left: 11vw;
     cursor: pointer;
     margin-top: 15vw;
-    opacity: 0.5;
+    opacity: 0.7;
     transition: opacity 0.5s;
+    text-shadow: 0 0 5px var(--azul-quatro);
 }
 #next {
     left: unset;
