--- a/style/projetos.css
+++ b/style/projetos.css
@@ -1,3 +1,99 @@
 .projetos {
     background: linear-gradient(to left, var(--azul-um), var(--azul-um-um));
 }
+
+.projetos_div {
+    display: flex;
+    margin: 0 10vw;
+    justify-content: space-between;
+    margin-top: 5vw;
+}
+
+.projetos_img {
+    width: 22vw;
+    height: 26vw;
+    background-size: cover;
+    background-position: 100% 0%;
+    transition: 5s;
+    position: relative;
+}
+
+.cavalete {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    margin-top: -5.1vw;
+}
+
+.projetos_img:hover {
+    background-position: 100% 100%;
+}
+
+.projetos_overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--cor-overlay);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    transition: 1s;
+}
+.projetos_overlay:hover {
+    opacity: 1;
+}
+
+.projetos_titulo {
+    font-size: 2vw;
+    font-family: var(--font-um);
+    font-weight: 400;
+    color: var(--azul-tres);
+    text-shadow: 1px 1px 3px var(--cor-tres), -1px -1px 3px var(--cor-tres);
+    margin-top: 2em;
+}
+.projetos_texto {
+    padding: 1em 2em;
+    font-family: var(--font-paint);
+    color: var(--azul-um);
+}
+
+.projetos_link_btn {
+    background-color: var(--cor-dois);
+    padding: 0.7vw;
+    border-radius: 1em;
+    text-decoration: none;
+    font-family: var(--font-marker);
+    color: var(--azul-tres);
+    opacity: 0.7;
+}
+
+.projetos_link_btn:hover {
+    opacity: 1;
+}
+.projetos_link_btn:active {
+    color: var(--azul-dois);
+}
+
+@media screen and (max-width: 600px) {
+    .projetos_div {
+        flex-direction: column;
+        margin: 20vw 5vw;
+        gap: 50vw;
+    }
+
+    .projetos_img {
+        width: auto;
+        height: 106vw;
+
+    }
+    
+    .cavalete {
+        position: absolute;
+        overflow: hidden;
+        width: 100%;
+        margin-top: -21vw;
+    }
+}
