--- a/style/projetos.css
+++ b/style/projetos.css
@@ -58,6 +58,7 @@
     padding: 1em 2em;
     font-family: var(--font-paint);
     color: var(--azul-um);
+    font-size: 1vw;
 }
 
 .projetos_link_btn {
