--- a/style/style.css
+++ b/style/style.css
@@ -64,6 +64,8 @@ body {
     box-sizing: border-box;
     cursor: url("assets/icons/graffite.png");
     transition: 0.3s;
+
+    overflow-x: auto;
 }
 
 .container {
@@ -93,6 +95,23 @@ body {
     position: relative; 
     z-index: 1; 
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: var(--azul-um-um);
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--cor-dois-t);
+
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--cor-dois);
+  }
 
 
 @media screen and (max-width:600px) {
