--- a/style/contato.css
+++ b/style/contato.css
@@ -56,8 +56,8 @@
 
 /* BOX INFO */
 .contact_info_img {
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     z-index: 1;;
     margin-left: 1rem;
 }
@@ -163,7 +163,7 @@
 
 .contact_button {
     color: var(--azul-quatro);
-    background-color: var(--azul-tres);
+    background-color: var(--azul-dois);
     border: 2px solid var(--azul-quatro);
     border-radius: 1.2em;
     width: 7em;
@@ -174,13 +174,12 @@
     font-family: var(--font-marker);
     font-weight: 400;
     font-size: 1.5em;
-    opacity: 0.8;
+    opacity: 0.7;
 }
 .contact_button:hover {
-    background-color: var(--azul-dois);
+    background-color: var(--azul-um);
     color: var(--azul-tres);
     border: 2px solid var(--azul-tres);
-    opacity: 0.8;
 }
 .contact_button:active{
     opacity: 1;
