--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@
 @import url("services.css");
 @import url("projetos.css");
 @import url("contato.css");
+@import url("footer.css");
 @import url("thankspage.css");
 
 :root {
@@ -21,6 +22,7 @@
     --azul-quatro-t: #001d8648;
 
     --cor-dois:#fcf7e1;
+    --cor-dois-d:#fff5ca;
     --cor-dois-t:#fcf7e186;
     --cor-tres: #ffdd00;
 
@@ -45,6 +47,7 @@
     --azul-quatro-t: #d9f4ff48;
 
     --cor-dois:#26397a;
+    --cor-dois-d:#26547a;
     --cor-dois-t:#001d8648;
     --cor-tres: #ffdd00;
 
@@ -97,7 +100,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 3px;
   }
   
   ::-webkit-scrollbar-track {
@@ -119,6 +122,7 @@ body {
         height: 170vw;
         width: auto;
         overflow: scroll;
+        padding: 0;
     }
 
     .titulo {
