projeto finalizado por enquanto
adicionei link wpp e mudei a cor dos botoes no thankspage

--- a/style/thankspage.css
+++ b/style/thankspage.css
@@ -105,7 +105,7 @@
 .thankspage_links_ancora:hover {
     border: 3px solid var(--cor-tres);
     color: var(--cor-tres);
-    background-color: var(--azul-tres);
+    background-color: var(--azul-dois);
 }
 .thankspage_links_ancora:hover .thankspage_img {
     transform: rotateY(180deg);
